--- a/index.html
+++ b/index.html
@@ -9,7 +9,27 @@
 
     <!--Go to https://console.firebase.google.com-->
     <!--Sign in and add a project "fireMessage"-->
-    <!--PASTE SNIPPET HERE-->
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
+
+<script src="https://www.gstatic.com/firebasejs/5.10.0/firebase-database.js"></script>
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#config-web-app -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyAlANOCaUB3Y_5k0D1FJNi2KpTmt9RRquE",
+    authDomain: "chatmessaging-4b84e.firebaseapp.com",
+    databaseURL: "https://chatmessaging-4b84e.firebaseio.com",
+    projectId: "chatmessaging-4b84e",
+    storageBucket: "",
+    messagingSenderId: "64250483224",
+    appId: "1:64250483224:web:c576726126ac4806"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
 
 
 
