--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
 
     <!--Add your name-->
-    <h1>Bob's Messaging App</h1>
+    <h1>Jordan's Messaging App</h1>
 
     <!--This div will be populated with messages-->
     <div class="allMessages">
